<resources>
    <string name="app_name">GueStay</string>
    <string name="student">Student</string>
    <string name="faculty_staff">Faculty/Staff</string>
    <string name="admin">Admin</string>
    <string name="imgdetails">IIITD</string>
    <string name="check_availability">Check Availability</string>


...
    <string name="associated_room_id">Room(s) \n</string>
    <string name="male">Male(s) \n</string>
    <string name="female">Female(s) \n</string>
    <string name="let_s_go">Check Availability</string>
    <string name="rooms">Rooms</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="male_s">Male(s)</string>
    <string name="female_s">Female(s)</string>
    <string name="more_options">More Options...</string>
    <string name="inr">INR 1500</string>
    <string name="cardVal">0</string>
    <string name="check_avail">Home</string>
...
    <string name="room_details">Room ID </string>
    <string name="total_price">Total Price: ₹</string>
    <string name="total_rooms">Total Rooms:</string>
    <string name="price_rs">Price: ₹</string>
    <string name="only_rs">₹</string>
    <string name="preferences">Preferences</string>
    <string name="book">Book</string>
    <string name="termscontracted">1 - Maximum two people can stay in any Room/Flat. \n\
2 - Only Female Guests can stay in Girls Hostel. \n\</string>
    <string name="termsexpanded">1 - Maximum two people can stay in any Room/Flat. \n\
2 - Only Female Guests can stay in Girls Hostel. \n\
3 - Students can book rooms only for their Parents and immediate siblings.\n\
    4 - Only Faculty/Staff are allowed to book Rooms/Flats in Faculty Residence\n\
...
